deployment/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - port: 80
      targetPort: 4180
