deployment/app/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    ingress: ingress-nginx
spec:
  ingressClassName: app
